# research-digest

./: .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT_BRIEF.md  README.md  env.example  pyproject.toml
.github/workflows/: check-models.yml  digest.yml  tests.yml
config/: topics.example.yaml  topics.generic.yaml  topics.yaml  user.yaml.example
docs/: ARCHITECTURE.md  DECISIONS.md  MANUAL_STEPS.md  PRODUCT_SPEC.md  RUNNER.md  STATE.md  TASKS.md
scripts/: runner.sh
src/research_digest/: categories.py  cli.py  config.py  logging_config.py  models.py
src/research_digest/delivery/: base.py  gmail.py
src/research_digest/fetchers/: arxiv.py
src/research_digest/pipeline/: __init__.py  build_digest.py  fetch.py  rank.py  summarize.py
src/research_digest/rendering/: html_email.py  latex.py  markdown.py
src/research_digest/storage/: db.py  repository.py
src/research_digest/summarization/: base.py  extractive.py  gemini.py  model_check.py  providers.py
tests/: conftest.py  test_arxiv_fetcher.py  test_config.py  test_delivery.py  test_digest_rendering.py  test_edge_cases.py  test_latex.py  test_model_check.py  test_pipeline_integration.py  test_ranking.py  test_storage.py  test_summarization.py
