[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-digest"
dynamic = ["version"]
description = "Local-first research digest generator"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
    "pyyaml>=6,<7",
    "jinja2>=3.1,<4",
    "python-dotenv>=1,<2",
    "pylatexenc>=2.10,<3",
]

[project.scripts]
research-digest = "research_digest.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
]

[tool.hatch.version]
path = "src/research_digest/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/research_digest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
